--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,3 +28,31 @@ div.swal2-popup.swal2-toast .swal2-html-container {
 div.swal2-popup.swal2-toast .swal2-icon {
   @apply mr-4;
 }
+
+div.swal2-popup.image-only {
+  @apply p-0 bg-transparent w-auto
+}
+
+div.swal2-popup.image-only .swal2-html-container {
+  @apply m-0 max-h-[80vh] max-w-[80vw] mt-4 mx-auto
+}
+
+div.swal2-popup .swal2-close {
+  @apply bg-secondary border-2 border-secondary-dark text-secondary-contrast rounded-full w-8 h-8 border-solid
+}
+
+div.swal2-popup .swal2-close:hover {
+  @apply bg-secondary-light
+}
+
+div.swal2-popup.image-only .swal2-title {
+  @apply p-0 text-white
+}
+
+div.swal2-popup.image-only .swal2-close {
+  @apply fixed right-4 top-4
+}
+
+div.swal2-popup.image-only .swal2-close:focus {
+  @apply outline-2 outline outline-red-400 shadow-none
+}
