--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,7 +10,7 @@ body,
 }
 
 html {
-  @apply min-h-full bg-cr-fill text-cr-fill-contrast;
+  @apply min-h-full bg-cr-fill text-cr-fill-contrast relative;
 }
 
 svg[data-reset] {
